plang/testing/logs/false-incorrect/51/program51.p.p
dZ1.
j5eK (qYb (Qr)) :- xju JwlBk, e6R (Xq) bah R1; (wR0 dY (N2Zi) (Tye1J) e9A), wybN ovJt (Szt) eh, gsTzp (yHlv); fWL; (ebsPg (hC8Jh qIT) cm0 QztG, a p nO9Rf (o9N ryy M9U Pm YL), pTL (Y6) g6hY).


huhv (N) :- cqw QHFb sF ILh2 NYw; ((hwu nSbO pQlv6 (TpETa); x1riB); moc (bUqSV) MUyLX; d RpQn; (j (W0ma) e W)).

h (cZ fE d6AS Q) ye2 VnAmy.

egb2B jVA (wZl BZ (a n (MKZ) (XO) (Vf2)) OjYr (tzN (qXp TTH (kp Gv N BU (UU9))) (HN9Mw) (AmqSc) (fdlL gMlsf u))) (CEJdU) SWrk.
? (((dP6ng (CWSyT)); (dO); zAuZ (Zq) (J); j (ki (G4h) (z (fl) nbkiI cFJc)) q (GiQ) (I); nWe6 Rm (Et0uk) JEFU5 oWP)).



